# selenium-playground

./: Makefile  docker-compose.yml
application/: main.py  main_docker.py  practice1.py  practice2.py  pyproject.toml
containers/python/: Dockerfile
