[tool.poetry]
name = "selenium-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"
Pillow = "^9.5.0"
black = "^23.3.0"
isort = "^5.12.0"
chromedriver-binary = "^114.0.5735.16.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pyquery = "^2.0.0"
scrapy = "^2.9.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

